move symexpr to their own folders